added login page

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
                 </a>
               </div>
               <div class="header__box">
-                <div class="notification__box">
+                <div class="notification__box header__btn-login--off">
                   <a class="notification icon-bell header__icons active" href="#">
                     <span>25</span>
                   </a>
@@ -112,7 +112,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="message__box">
+                <div class="message__box header__btn-login--off">
                   <a class="message icon-envelope header__icons active" href="#">
                     <span>6</span>
                   </a>
@@ -274,7 +274,7 @@
                   </div>
                 </div>
                 <div class="user__box">
-                  <a href="#" class="user">
+                  <a href="#" class="user header__btn-login--off">
                     <div class="user__inner">
                       <div class="user__images">
                         <img src="images/icons/user-login.jpg" alt="">
@@ -306,8 +306,8 @@
                     </ul>
                   </div>
                 </div>
-                <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
-                <a class="header__btn header__btn-register header__btn-register--off" href="#">Register</a>
+                <a class="header__btn header__btn-login" href="#">Login</a>
+                <a class="header__btn header__btn-register" href="#">Register</a>
               </div>
             </div>
           </div>
