--- a/app/page.html
+++ b/app/page.html
@@ -466,318 +466,29 @@
         </div>
       </header>
 
-      <section class="search page-search">
+      <section class="search page">
         <div class="container">
-          <div class="page-search__inner">
-            <h2 class="page-search__inner-text">
-              <span>4,572 </span>wordpress themes, made with love
+          <div class="page__inner">
+            <div class="breadcrumbs">
+              <div class="breadcrumbs__inner">
+                <ul class="breadcrumbs__list">
+                  <li><a href="#">Home</a></li>
+                  <li><span>Category Page Grid</span></li>
+                </ul>
+              </div>
+            </div>
+            <h2 class="page__inner-text">
+              wordpress themes, made with love
             </h2>
-            <div class="footer__form page-search__form">
-              <form>
-                <input type="text" placeholder="Search your products">
-                <button type="submit">Search</button>
-              </form>
-            </div>
-          </div>
-          <div class="breadcrumbs">
-            <div class="breadcrumbs__inner">
-              <ul class="breadcrumbs__list">
-                <li><a href="#">Home</a></li>
-                <li><span>Category Page Grid</span></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="product__page">
-        <div class="product__page-top">
-          <div class="container">
-            <div class="product__page-top-inner">
-              <div class="product__page-btn-inner">
-                <button class="product__page-btn product__page-btn--active" type="button">New Products</button>
-                <button class="product__page-btn" type="button">Popular Products</button>
-              </div>
-              <div class="product__page-settings">
-                <div class="settings__price">
-                  <span>Price :</span>Low to High
-                  <ul class="settings__price-menu">
-                    <li><button class="settings__price-menu-item" type="button">Low to High</button></li>
-                    <li><button class="settings__price-menu-item" type="button">Low to High</button></li>
-                    <li><button class="settings__price-menu-item" type="button">Low to High</button></li>
-                    <li><button class="settings__price-menu-item" type="button">Low to High</button></li>
-                  </ul>
-                </div>
-                <div class="settings__items">
-                  12 Items Per Page
-                  <ul class="settings__items-menu">
-                    <li><button class="settings__items-menu-item" type="button">10 Items Per Page</button></li>
-                    <li><button class="settings__items-menu-item" type="button">8 Items Per Page</button></li>
-                    <li><button class="settings__items-menu-item" type="button">4 Items Per Page</button></li>
-                    <li><button class="settings__items-menu-item" type="button">2 Items Per Page</button></li>
-                  </ul>
-                </div>
-                <div class="settings__btn">
-                  <button class="settings__btn-item-grid" type="button"></button>
-                  <button class="settings__btn-item-grid--gray" type="button"></button>
-                  <button class="settings__btn-item-list" type="button"></button>
-                  <button class="settings__btn-item-list--blue" type="button"></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="product__page-inner">
-            <aside class="product__page-aside">
-              <div class="category aside__item">
-                <h3 class="aside__title aside__title-categories">
-                  Categories
-                </h3>
-                <ul class="category__list">
-                  <li><a class="category__list-item category__list-item--active" href="#">WordPress</a><span>35</span>
-                  </li>
-                  <li><a class="category__list-item" href="#">Landing Page</a><span>45</span></li>
-                  <li><a class="category__list-item" href="#">Psd Template</a><span>13</span></li>
-                  <li><a class="category__list-item" href="#">Plugins</a><span>08</span></li>
-                  <li><a class="category__list-item" href="#">HTML Template</a><span>34</span></li>
-                  <li><a class="category__list-item" href="#">Components</a><span>78</span></li>
-                  <li><a class="category__list-item" href="#">Joomla Template</a><span>26</span></li>
-                </ul>
-              </div>
-              <div class="filter aside__item">
-                <h3 class="aside__title aside__title-filter">
-                  Filter Products
-                </h3>
-                <ul class="filter__list">
-                  <li><a class="filter__list-item" href="#">Trending Products</a></li>
-                  <li><a class="filter__list-item" href="#">Popular Products</a></li>
-                  <li><a class="filter__list-item" href="#">New Products</a></li>
-                  <li><a class="filter__list-item" href="#">Best Seller</a></li>
-                  <li><a class="filter__list-item" href="#">Best Rating</a></li>
-                  <li><a class="filter__list-item" href="#">Low Price</a></li>
-                  <li><a class="filter__list-item" href="#">High Price</a></li>
-                </ul>
-              </div>
-              <div class="price-range aside__item">
-                <h3 class="aside__title aside__title-price">
-                  Pricing Range
-                </h3>
-                <form class="aside__price-form">
-                  <input type="text" class="js-range-slider" name="my_range" value="" />
-                  <button type="submit">Search Update</button>
-                </form>
-              </div>
-            </aside>
-            <div class="product__page-content">
-              <div class="product__page-items">
-                <div class="product__item">
-                  <a class="product__item-img" href="#"
-                    style="background-image: url(images/products/product-page.png);"></a>
-                  <div class="product__item-content">
-                    <h3>
-                      <a class="item__content-title" href="#">
-                        Finance and Consulting
-                        Business Theme
-                      </a>
-                    </h3>
-                    <div class="item__content-seller">
-                      <a class="seller__img" href="#" style="background-image: url(images/icons/user.jpg);"></a>
-                      <a class="seller__name" href="#">Theme-Valley</a>
-                    </div>
-                    <div class="item__content-rate">
-                      <div class="rate-star"></div>
-                      <div class="item__box-purch">427</div>
-                    </div>
-                  </div>
-                  <div class="product__item-price">
-                    <div class="item__box-price">$18</div>
-                    <a class="item__seller-platform" href="#">Wordpress</a>
-                  </div>
-                </div>
-
-                <div class="product__item-list">
-                  <a href="#" class="product__item-img"
-                    style="background-image: url(images/products/product-page.png);"></a>
-                  <div class="item__right-1">
-                    <h3>
-                      <a class="item__right-title" href="#">
-                        Finance and Consulting
-                        Business Theme
-                      </a>
-                    </h3>
-                    <p class="item__right-text">
-                      Nunc placerat mi id nisi inter dum mollis. Praesent phare...
-                    </p>
-                    <a class="item__seller-platform" href="#">Wordpress</a>
-                  </div>
-                  <div class="item__right-2">
-                    <div class="item__content-seller">
-                      <a class="seller__img" href="#" style="background-image: url(images/icons/user.jpg);"></a>
-                      <a class="seller__name" href="#">Theme-Valley</a>
-                    </div>
-                    <div class="item__right-loves">90 loves</div>
-                    <a class="item__right-comments" href="#">90 Comments</a>
-                    <div class="item__right-rate">
-                      <div class="rate-star"></div><span>(34)</span>
-                    </div>
-                  </div>
-                  <div class="item__right-3">
-                    <div class="item__box-price">$10 - $50</div>
-                    <div class="item__box-purch">892</div>
-                  </div>
-                </div>
-
-                <div class="product__item">
-                  <a class="product__item-img" href="#"
-                    style="background-image: url(images/products/product-page.png);"></a>
-                  <div class="product__item-content">
-                    <h3>
-                      <a class="item__content-title" href="#">
-                        Finance and Consulting
-                        Business Theme
-                      </a>
-                    </h3>
-                    <div class="item__content-seller">
-                      <a class="seller__img" href="#" style="background-image: url(images/icons/user.jpg);"></a>
-                      <a class="seller__name" href="#">Theme-Valley</a>
-                    </div>
-                    <div class="item__content-rate">
-                      <div class="rate-star"></div>
-                      <div class="item__box-purch">427</div>
-                    </div>
-                  </div>
-                  <div class="product__item-price">
-                    <div class="item__box-price">$18</div>
-                    <a class="item__seller-platform" href="#">Wordpress</a>
-                  </div>
-                </div>
-
-                <div class="product__item-list">
-                  <a href="#" class="product__item-img"
-                    style="background-image: url(images/products/product-page.png);"></a>
-                  <div class="item__right-1">
-                    <h3>
-                      <a class="item__right-title" href="#">
-                        Finance and Consulting
-                        Business Theme
-                      </a>
-                    </h3>
-                    <p class="item__right-text">
-                      Nunc placerat mi id nisi inter dum mollis. Praesent phare...
-                    </p>
-                    <a class="item__seller-platform" href="#">Wordpress</a>
-                  </div>
-                  <div class="item__right-2">
-                    <div class="item__content-seller">
-                      <a class="seller__img" href="#" style="background-image: url(images/icons/user.jpg);"></a>
-                      <a class="seller__name" href="#">Theme-Valley</a>
-                    </div>
-                    <div class="item__right-loves">90 loves</div>
-                    <a class="item__right-comments" href="#">90 Comments</a>
-                    <div class="item__right-rate">
-                      <div class="rate-star"></div><span>(34)</span>
-                    </div>
-                  </div>
-                  <div class="item__right-3">
-                    <div class="item__box-price">$10 - $50</div>
-                    <div class="item__box-purch">892</div>
-                  </div>
-                </div>
-
-                <div class="product__item">
-                  <a class="product__item-img" href="#"
-                    style="background-image: url(images/products/product-page.png);"></a>
-                  <div class="product__item-content">
-                    <h3>
-                      <a class="item__content-title" href="#">
-                        Finance and Consulting
-                        Business Theme
-                      </a>
-                    </h3>
-                    <div class="item__content-seller">
-                      <a class="seller__img" href="#" style="background-image: url(images/icons/user.jpg);"></a>
-                      <a class="seller__name" href="#">Theme-Valley</a>
-                    </div>
-                    <div class="item__content-rate">
-                      <div class="rate-star"></div>
-                      <div class="item__box-purch">427</div>
-                    </div>
-                  </div>
-                  <div class="product__item-price">
-                    <div class="item__box-price">$18</div>
-                    <a class="item__seller-platform" href="#">Wordpress</a>
-                  </div>
-                </div>
-
-                <div class="product__item-list">
-                  <a href="#" class="product__item-img"
-                    style="background-image: url(images/products/product-page.png);"></a>
-                  <div class="item__right-1">
-                    <h3>
-                      <a class="item__right-title" href="#">
-                        Finance and Consulting
-                        Business Theme
-                      </a>
-                    </h3>
-                    <p class="item__right-text">
-                      Nunc placerat mi id nisi inter dum mollis. Praesent phare...
-                    </p>
-                    <a class="item__seller-platform" href="#">Wordpress</a>
-                  </div>
-                  <div class="item__right-2">
-                    <div class="item__content-seller">
-                      <a class="seller__img" href="#" style="background-image: url(images/icons/user.jpg);"></a>
-                      <a class="seller__name" href="#">Theme-Valley</a>
-                    </div>
-                    <div class="item__right-loves">90 loves</div>
-                    <a class="item__right-comments" href="#">90 Comments</a>
-                    <div class="item__right-rate">
-                      <div class="rate-star"></div><span>(34)</span>
-                    </div>
-                  </div>
-                  <div class="item__right-3">
-                    <div class="item__box-price">$10 - $50</div>
-                    <div class="item__box-purch">892</div>
-                  </div>
-                </div>
-              </div>
-              <div class="pagination">
-                <button class="icon-long-arrow-left" type="button"></button>
-                <ul class="pagination__list">
-                  <li><span class="active" href="#">1</span></li>
-                  <li><a href="#">2</a></li>
-                  <li><span href="#">...</span></li>
-                  <li><a href="#">8</a></li>
-                </ul>
-                <button class="icon-long-arrow-right" type="button"></button>
-              </div>
-            </div>
           </div>
         </div>
       </section>
 
 
 
-      <section class="join">
-        <div class="join__content" style="background-image: url(images/bg.jpg);">
-          <div class="container">
-            <div class="join__inner">
-              <div class="join__title">
-                Ready to Join Our Marketplace!
-              </div>
-              <div class="join__text">
-                Over 25,000 designers and developers trust the MartPlace.
-              </div>
-              <div class="join__btn">
-                <a class="products__inner-link" href="#">Join Us Today</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+
+
     </div>
-
     <footer class="footer">
       <div class="footer__content">
         <div class="container">
