--- a/app/index.html
+++ b/app/index.html
@@ -309,12 +309,18 @@
                 <a class="header__btn header__btn-login" href="#">Login</a>
                 <a class="header__btn header__btn-register" href="#">Register</a>
               </div>
+              <div class="header__btn-user icon-user"></div>
             </div>
           </div>
         </div>
         <div class="container">
           <div class="header__menu">
             <nav class="menu">
+              <div class="menu__btn">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
               <ul class="menu__list">
                 <li class="header__menu-home">
                   <a href="#">
