--- a/app/register.html
+++ b/app/register.html
@@ -309,12 +309,18 @@
                 <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
                 <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
               </div>
+              <div class="header__btn-user icon-user"></div>
             </div>
           </div>
         </div>
         <div class="container">
           <div class="header__menu">
             <nav class="menu">
+              <div class="menu__btn">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
               <ul class="menu__list">
                 <li class="header__menu-home">
                   <a href="#">
@@ -508,11 +514,11 @@
                 </div>
                 <div class="login-line">
                   <label>Password</label>
-                  <input type="text" placeholder="Enter your password..." required>
+                  <input type="password" placeholder="Enter your password..." required>
                 </div>
                 <div class="login-line">
                   <label>Confirm Password</label>
-                  <input type="text" placeholder="Enter your password..." required>
+                  <input type="password" placeholder="Enter your password..." required>
                 </div>
                 <button type="submit">Register Now</button>
               </form>
